--- a/aboutme.html
+++ b/aboutme.html
@@ -10,7 +10,7 @@
     <a href="aboutme.html">About Me</a>
     <h1>This is all about me!</h1>
     <h1>I am a junior in Rancho Bernardo High School</h1>
-    <img src="images/rbhs.JPG" height="500">
+    <img src="images/rbhs.jpg" height="500">
     <br>
     <h1>This is my family</h1>
     <img src="images/family.PNG" height="500">
@@ -19,13 +19,13 @@
     <img src="images/bozos.PNG" height="500">
     <br>
     <h1>I fence </h1>
-    <img src="images/fencing.JFIF" height="500">
+    <img src="images/fencing.jfif" height="500">
     <br>
     <h1>And I like studying math</h1>
-    <img src="images/math.JFIF" height="500">
+    <img src="images/math.jfif" height="500">
     <br>
     <h1>My favorite videogame is FIFA</h1>
-    <img src="images/fifa.JFIF" height="500">
+    <img src="images/fifa.jfif" height="500">
     <br>
     </a>
 	  </body>
