--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>This is Aiden Ryou's Home Page...</h1>
     <img src="images/seahawks.png" height="500">
     <h1>If you don't like the seahawks, go away</h1>
-    <img src="images/bloodymeme2.png" height="500">
+    <img src="images/bloodymeme2.PNG" height="500">
     <iframe width="420" height="315"
     src="https://www.youtube.com/embed/BMgl2t5ovKs">
     </iframe>
