--- a/aboutme.html
+++ b/aboutme.html
@@ -12,7 +12,7 @@
     <h1>I am a junior in Rancho Bernardo High School</h1>
     <img src="images/rbhs.jpg" height="500">
     <br>
-    <h1>This is my family</h1>
+    <h1>This is my family. Please don't take them hostage. I have $3.27 and half a donut to my name</h1>
     <img src="images/family.PNG" height="500">
     <br>
     <h1>And these are my friends</h1>
