--- a/aboutme.html
+++ b/aboutme.html
@@ -10,6 +10,7 @@
     <a href="aboutme.html">About Me</a>
     <h1>This is all about me!</h1>
     <h1>I am a junior in Rancho Bernardo High School</h1>
+    <center>
     <img src="images/rbhs.jpg" height="500">
     <br>
     <h1>This is my family. Please don't take them hostage. I have $3.27 and half a donut to my name</h1>
@@ -26,6 +27,7 @@
     <br>
     <h1>My favorite videogame is FIFA</h1>
     <img src="images/fifa.jfif" height="500">
+    </center>
     <br>
     </a>
 	  </body>
