--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
     <a href="index.html">Home at Last</a>
     <a href="portfolio.html">Portfolio</a>
     <a href="aboutme.html">About Me</a>
+    <center>
     <h1>This is Aiden Ryou's Home Page...</h1>
     <img src="images/seahawks.png" height="500">
     <h1>If you don't like the seahawks, go away</h1>
     <img src="images/bloodymeme2.PNG" height="500">
+    <br>
     <iframe width="420" height="315"
     src="https://www.youtube.com/embed/BMgl2t5ovKs">
     </iframe>
+    </center>
   </body>
 </html>
