--- a/aboutme.html
+++ b/aboutme.html
@@ -18,6 +18,7 @@
     <br>
     <h1>And these are my friends</h1>
     <img src="images/bozos.PNG" height="500">
+    <img src="images/valabozoo.PNG" height="500">
     <br>
     <h1>I fence </h1>
     <img src="images/fencing.jfif" height="500">
