--- a/aboutme.html
+++ b/aboutme.html
@@ -19,6 +19,7 @@
     <h1>And these are my friends</h1>
     <img src="images/bozos.PNG" height="500">
     <img src="images/valabozoo.png" height="500">
+    <img src="images/pranavv.png" height="500">
     <br>
     <h1>I fence </h1>
     <img src="images/fencing.jfif" height="500">
