--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,9 @@
     <h1>This is my Portfolio Page!</h1>
     <img src="images/portfolio.jpg" height="250">
     <br>
-    <h1>   Second day scratch project.</h1>
+    <h1>   CSP Football Project</h1>
+    <img src="images/CSPFootball.PNG" height="250">
+    <h1>   CSP Football emulates a real-life penalty shootout in soccer. The player first sees the welcome screen, and has to press "y" to continue. Next, the player is allowed to choose a direction, left/right and up/down to shoot the ball. The Computer dives the goalie in a random direction, and depending on the outcome, your score goes up by 1 or stays the same. The same thing is done in reverse: you must save a direction to choose, and the computer kicks the ball in a random direction. The computer's score goes up by 1 or stays the same. This is repeated 5 times, like a real-life penalty shootout. You win if you score more points than the computer.
     <br>
     <h1>   Using App Inventor to make app game Duck Hunter.</h1>
     <br>
