--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
 	  </head>
 	  <body bgcolor="#FFFF00">
     <a href="index.html">Home</a>
-    <a href="portfolio.PNG">Portfolio</a>
+    <a href="portfolio.html">Portfolio</a>
     <a href="aboutme.html">About Me</a>
     <center>
     <h1>This is my Portfolio Page!</h1>
