--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,9 @@
     <img src="images/CSPFootball.png" height="250">
     <h1>   CSP Football emulates a real-life penalty shootout in soccer. The player first sees the welcome screen, and has to press "y" to continue. Next, the player is allowed to choose a direction, left/right and up/down to shoot the ball. The Computer dives the goalie in a random direction, and depending on the outcome, your score goes up by 1 or stays the same. The same thing is done in reverse: you must save a direction to choose, and the computer kicks the ball in a random direction. The computer's score goes up by 1 or stays the same. This is repeated 5 times, like a real-life penalty shootout. You win if you score more points than the computer.</h1>
     <br>
-    <h1>   Using App Inventor to make app game Duck Hunter.</h1>
+    <h1>   Hikaru's Journey ft. Juicers</h1>
+    <img src="images/HikarusJourney" height="250">
+    <h1>   Hkaru's Journey ft. Juicers is a snake-based game. You control Hikaru Nakamura, one of the best chess players in the world, using WASD. The objective of the game is to collect as many "juicers," or pawns, as possible while avoiding Magnus and staying inside the Chess Board. The score is displayed on the top of the game, and Hikaru's image changes based on when he is moving, eating a pawn, or dead. 
     <br>
     <h1>   Interactive Fiction Rags to Riches.</h1>
     <br>
