--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,9 @@
     <h1>   Hikaru's Journey ft. Juicers</h1>
     <img src="images/hikarus_journey.PNG" height="250">
     <h1>   Hkaru's Journey ft. Juicers is a snake-based game. You control Hikaru Nakamura, one of the best chess players in the world, using WASD. The objective of the game is to collect as many "juicers," or pawns, as possible while avoiding Magnus and staying inside the Chess Board. The score is displayed on the top of the game, and Hikaru's image changes based on when he is moving, eating a pawn, or dead. 
-    <br>
+    <h1>   Hikaru's Journey ft. Juicers</h1>
+    <img src="RainingMinions.PNG" height="250">
+    <h1>   Hkaru's Journey ft. Juicers is a snake-based game. You control Hikaru Nakamura, one of the best chess players in the world, using WASD. The objective of the game is to collect as many "juicers," or pawns, as possible while avoiding Magnus and staying inside the Chess Board. The score is displayed on the top of the game, and Hikaru's image changes based on when he is moving, eating a pawn, or dead. 
     <h1>   Interactive Fiction Rags to Riches.</h1>
     <br>
     <h1>   Black Jack game written in Python.</h1>
