--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
     <h1>   Hkaru's Journey ft. Juicers is a snake-based game. You control Hikaru Nakamura, one of the best chess players in the world, using WASD. The objective of the game is to collect as many "juicers," or pawns, as possible while avoiding Magnus and staying inside the Chess Board. The score is displayed on the top of the game, and Hikaru's image changes based on when he is moving, eating a pawn, or dead. 
     <br>
     <h1>   Raining Good and Evil Minions</h1>
-    <img src="RainingMinions.png" height="250">
+    <img src="images/RainingMinions.png" height="250">
     <h1>   Raining Good and Evil Minions is a game where the user moves the basket using the arrow keys to catch as many good minions (+5 poitns) and avoid the bad minions (Score is halved, 1 life gone). If the user collects 200 points, the user wins. If the user runs out of the 3 lives that are initially given, the user loses. There are two power ups in this game, the expanding power up where the basket becomes longer for 10 seconds, and the lightning power up which allows the user to press space to release a bolt of thuder for 10 seconds. The thunder can zap a purple minion to make it disappear and the user gains 20 points. </h1>
     <h1>   Interactive Fiction Rags to Riches.</h1>
     <br>
