--- a/portfolio.html
+++ b/portfolio.html
@@ -23,6 +23,9 @@
     <h1>   Raining Good and Evil Minions</h1>
     <img src="images/RainingMinions.png" height="250">
     <h1>   Raining Good and Evil Minions is a game where the user moves the basket using the arrow keys to catch as many good minions (+5 poitns) and avoid the bad minions (Score is halved, 1 life gone). If the user collects 200 points, the user wins. If the user runs out of the 3 lives that are initially given, the user loses. There are two power ups in this game, the expanding power up where the basket becomes longer for 10 seconds, and the lightning power up which allows the user to press space to release a bolt of thuder for 10 seconds. The thunder can zap a purple minion to make it disappear and the user gains 20 points. </h1>
+    <h1>   Honey Bee Data Project</h1>
+    <img src="images/Project4.png" height="250">
+    <h1>   This is our graph of Honey Production by year, seperated by State. We found interesting trends within the data that were visualized by drawing a graph using code, using matplotlib. </h1>
     <h1>   Interactive Fiction Rags to Riches.</h1>
     <br>
     <h1>   Black Jack game written in Python.</h1>
