--- a/portfolio.html
+++ b/portfolio.html
@@ -26,6 +26,9 @@
     <h1>   Honey Bee Data Project</h1>
     <img src="images/Project4.png" height="250">
     <h1>   This is our graph of Honey Production by year, seperated by State. We found interesting trends within the data that were visualized by drawing a graph using code, using matplotlib. </h1>
+    <h1>   Peppered Moth Simulation</h1>
+    <img src="images/Project5.png" height="250">
+    <h1>   We observed that pollution caused by humans can impact peppered moth color, due to natural selection. We also saw how quickly the peppered moth population respond to changes in light level. Despite each individual moth not being able to change color, natural selection was able to influence the population as a whole. </h1>
     <h1>   Interactive Fiction Rags to Riches.</h1>
     <br>
     <h1>   Black Jack game written in Python.</h1>
