--- a/portfolio.html
+++ b/portfolio.html
@@ -29,16 +29,9 @@
     <h1>   Peppered Moth Simulation</h1>
     <img src="images/Project5.PNG" height="250">
     <h1>   We observed that pollution caused by humans can impact peppered moth color, due to natural selection. We also saw how quickly the peppered moth population respond to changes in light level. Despite each individual moth not being able to change color, natural selection was able to influence the population as a whole. </h1>
-    <h1>   Interactive Fiction Rags to Riches.</h1>
-    <br>
-    <h1>   Black Jack game written in Python.</h1>
-    <br>
-    <h1>   Modified bits in pictures.</h1>
-    <br>
-    <h1>   Use data files to create graphs.</h1>
-    <br>
-    <h1>   Using netlogo do remix of illusions.</h1>
-    <h1>   Interactive Fiction Rags to Riches.</h1>
+    <h1>   Rover Data Graphing</h1>
+    <img src="images/FinalProject.PNG" height="250">
+    <h1>   Using the data that was given to us by the rover, which included light, sound, gyroscope data, and temperature, we identified which part of the data corresponded to which, and graphed each section of the data against time, in order to deduce what region of the island the rover was in given the conditions.</h1>
     <br>
     </center>
 	  </body>
